<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragment_first">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/tv_hello"
        android:text="@string/hello"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textStyle="bold"
        android:backgroundTint="#2A8E84"
        android:textColor="@color/black"
        android:textSize="30sp"
       />

    <TextView
        android:id="@+id/tv_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="40sp"
        android:textStyle="bold"
        />


</LinearLayout>